--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ producer.py
 connect_plugin/*conn*/
 random-notes
 07_teaddybear-telegram-sink.json
-06_teaddybear-telegram-sink.json
 movie/*
 teddy.mov
-cat.mov
+demo_elephant.mp4
